--- a/jre_frequency.ipynb
+++ b/jre_frequency.ipynb
@@ -393,662 +393,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 1,
    "id": "34f9312a-f676-4413-bd4e-10c1e559df68",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n",
-      "ho gaya task\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "frq = []\n",
+    "# frq = []\n",
     "\n",
-    "from datetime import datetime\n",
+    "# from datetime import datetime\n",
     "\n",
-    "# Input dates in the format 'YYYY-MM-DD'\n",
-    "for i in range(0, len(dt3)):\n",
-    "    try:\n",
+    "# # Input dates in the format 'YYYY-MM-DD'\n",
+    "# for i in range(0, len(dt3)):\n",
+    "#     try:\n",
     "        \n",
-    "        start_date_str = dt3[i+1]\n",
-    "        end_date_str = dt3[i]\n",
+    "#         start_date_str = dt3[i+1]\n",
+    "#         end_date_str = dt3[i]\n",
     "        \n",
-    "        # Convert the date strings to datetime objects\n",
-    "        start_date = datetime.strptime(start_date_str, '%Y %m %d')\n",
-    "        end_date = datetime.strptime(end_date_str, '%Y %m %d')\n",
+    "#         # Convert the date strings to datetime objects\n",
+    "#         start_date = datetime.strptime(start_date_str, '%Y %m %d')\n",
+    "#         end_date = datetime.strptime(end_date_str, '%Y %m %d')\n",
     "        \n",
-    "        # Calculate the number of days between the two dates\n",
-    "        delta = end_date - start_date\n",
+    "#         # Calculate the number of days between the two dates\n",
+    "#         delta = end_date - start_date\n",
     "        \n",
-    "        # Extract the number of days from the timedelta object\n",
-    "        num_days = delta.days\n",
+    "#         # Extract the number of days from the timedelta object\n",
+    "#         num_days = delta.days\n",
     "        \n",
-    "        # Print the result\n",
-    "        # print(num_days)\n",
-    "        frq.append(num_days)\n",
+    "#         # Print the result\n",
+    "#         # print(num_days)\n",
+    "#         frq.append(num_days)\n",
     "        \n",
-    "        # print(dt3[i], dt3[i+1])\n",
-    "    except:\n",
-    "        print(\"ho gaya task\")\n",
+    "#         # print(dt3[i], dt3[i+1])\n",
+    "#     except:\n",
+    "        # pass\n",
+    "#       \n",
     "        \n",
     "    \n",
-    "# start_date_str = '2023 01 15'\n",
-    "# end_date_str = '2023 05 20'\n",
+    "# # start_date_str = '2023 01 15'\n",
+    "# # end_date_str = '2023 05 20'\n",
     "\n",
-    "# # Convert the date strings to datetime objects\n",
-    "# start_date = datetime.strptime(start_date_str, '%Y %m %d')\n",
-    "# end_date = datetime.strptime(end_date_str, '%Y %m %d')\n",
+    "# # # Convert the date strings to datetime objects\n",
+    "# # start_date = datetime.strptime(start_date_str, '%Y %m %d')\n",
+    "# # end_date = datetime.strptime(end_date_str, '%Y %m %d')\n",
     "\n",
-    "# # Calculate the number of days between the two dates\n",
-    "# delta = end_date - start_date\n",
+    "# # # Calculate the number of days between the two dates\n",
+    "# # delta = end_date - start_date\n",
     "\n",
-    "# # Extract the number of days from the timedelta object\n",
-    "# num_days = delta.days\n",
+    "# # # Extract the number of days from the timedelta object\n",
+    "# # num_days = delta.days\n",
     "\n",
-    "# # Print the result\n",
-    "# print({num_days})\n"
+    "# # # Print the result\n",
+    "# # print({num_days})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 8,
    "id": "86a5e00b-45d3-4c07-8cb9-748dce0942c0",
    "metadata": {},
    "outputs": [],
@@ -1065,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 3,
    "id": "9d10c313-c694-40fb-a3b2-bc1300af1d10",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 7,
    "id": "ea7493bf-5b39-4f2e-8f2d-48bdb2dbb504",
    "metadata": {},
    "outputs": [
@@ -1139,8 +539,9 @@
     }
    ],
    "source": [
+    "# the frequency\n",
     "\n",
-    "av(frq)"
+    "av(frq)\n"
    ]
   },
   {
@@ -1168,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
